# bikescout

./: .env.example  .gitignore  CITATION.cff  Dockerfile  README.md  docker-compose-ollama.yml  docker-compose.yml  humans.txt  index.html  mcp_config.json  mcp_server.py  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: codeql.yml
docs/: about.html  blog.html  cycling_encyclopedia.html  dst_enc.html  geodesic_accuracy_enc.html  hello_bikers.html  hydration_scout_enc.html  index.html  oropa.html  pro_climb_enc.html  roubaix_2026.html  s_scale_enc.html  shadow_persistence_enc.html  strava_feat.html  tael.html  tael_enc.html  wallsense.html  why_mcp.html
docs/md/: api_docs.md
site/: about.html  asi_enc.html  blog.html  cycling_encyclopedia.html  dst_enc.html  geodesic_accuracy_enc.html  hello_bikers.html  hydration_scout_enc.html  oropa.html  pro_climb_enc.html  roubaix_2026.html  s_scale_enc.html  shadow_persistence_enc.html  strava_feat.html  tael.html  tael_enc.html  wallsense.html  why_mcp.html
site/md/: api_docs.md  bikescout_ollama.md
src/bikescout/: mcp_server.py  schemas.py
src/bikescout/tools/: bike_setup.py  geocoding.py  geophysic.py  maps.py  mud.py  poi.py  scouting.py  strava.py  surface.py  weather.py
src/tools/: scouting.py  weather.py
